Microservice_fix/k8s/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: sadaraofficial/customer-service:1.0.3
        imagePullPolicy: Always 
        ports:
        - containerPort: 8084
