Microservice_fix/k8s/eurekaserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: sadaraofficial/eurekaserver:1.0.1   # Ganti dengan image repository Anda
        ports:
        - containerPort: 8761
